[gd_scene load_steps=6 format=3 uid="uid://b40ccspx5t5e6"]

[ext_resource type="Script" uid="uid://y6vp11gpslro" path="res://scripts/main_0.gd" id="1_qwuyc"]
[ext_resource type="Texture2D" uid="uid://d0i4m7semqy4b" path="res://HUD/Backgrounds/Lobby.png" id="2_7ehj6"]
[ext_resource type="Texture2D" uid="uid://ch840be28pxxc" path="res://HUD/Buttons/Start.png" id="2_qwuyc"]
[ext_resource type="Texture2D" uid="uid://rmlc0p7pogbr" path="res://HUD/Minigames/1.png" id="4_otahk"]
[ext_resource type="Texture2D" uid="uid://8cuf8hqog35l" path="res://HUD/Minigames/2.png" id="5_7ehj6"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_qwuyc")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_7ehj6")

[node name="StartBtn" type="TextureButton" parent="."]
visible = false
offset_left = 399.0
offset_top = 450.0
offset_right = 844.0
offset_bottom = 525.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_qwuyc")

[node name="Game1Btn" type="TextureButton" parent="."]
offset_left = 288.0
offset_top = 224.0
offset_right = 602.0
offset_bottom = 538.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_otahk")

[node name="Game2Btn" type="TextureButton" parent="."]
offset_left = 655.0
offset_top = 224.0
offset_right = 969.0
offset_bottom = 538.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_7ehj6")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 432.0
offset_top = 80.0
offset_right = 826.0
offset_bottom = 135.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Pick a game (or else)"
horizontal_alignment = 1

[connection signal="pressed" from="StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="Game1Btn" to="." method="_on_game_1_btn_pressed"]
[connection signal="pressed" from="Game2Btn" to="." method="_on_game_2_btn_pressed"]
